docs(bug 106): json.encode(Map) quebra em 3/5 alvos (JVM crash reflection; x86/riscv link error) — registrado com repro medido, ABERTO (superfície JSON = decisão regra 6)